test-cases/final-dump/repeated_type.exp
Error detected during loading module: repeated_type
final-dump/repeated_type.wybe:2:23: Syntax error: unexpected newline
