test-cases/final-dump/repeated_type.wybe
# should be errors
!println(1:string:int)
foreign llvm move(1:!int:!count, ?x:count)
